--- a/PA1_template.html
+++ b/PA1_template.html
@@ -323,7 +323,8 @@ Regarding the median, as there were initially several <em>complete</em> days wit
 <p><br /></p>
 <p>The code below:</p>
 <ul>
-<li>creates a new factor variable in the data set with two levels corresponding to whether a given day is a weekday or a weekend,</li>
+<li>creates a new factor variable in the data set with two levels corresponding to whether a given day is a weekday or a weekend,<br />
+</li>
 <li>generates a panel plot containing two time series plots of the average total number of steps across intervals; each time series plot corresponding to weekend or weekday data respectively.</li>
 </ul>
 <p><br /></p>
